*Empty MediaWiki Message*

--- a/आतुर्ली.mw
+++ b/आतुर्ली.mw
@@ -2,27 +2,27 @@
 
 आतुर्ली हे उत्तर गोवा जिल्ह्यातल्या दिवचल तालुक्यातील ६७.९४ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ११२ कुटुंबाचे व पुराय ४६७ लोकसंख्या आसा. हांगा लागीचे शार BICHOLIM ३ किलोमीटर अंतरावर आसा. हांगा २३४ दादले आनीक २३३ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६७५४  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
- साक्षरताय ==  
+== साक्षरताय ==  
 * एकूण साक्षर लोकसंख्या: ३६२
 * साक्षर पुरुश लोकसंख्या: १९९ (८५.०४%)
 * साक्षर स्त्री लोकसंख्या: १६३ (६९.९६%)
 
-शैक्षणिक सुविधा ==  
+== शैक्षणिक सुविधा ==  
 ﻿गांवांत १ शासकीय पूर्व-प्राथमिक शाळा आसा. 
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. 
- सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (MAEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं माध्यमिक शाळा (MAEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं उच्च माध्यमिक शाळा (MULGAO) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं पॉलिटेक्निक (MAEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (MAEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (MAEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (MULGAO) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक (MAEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
 
-वैजकी सुविधा (शासकीय) ==
+== वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य उपकेंद्र  ५ किलोमिटरा परस कमी अंतराचेर आसा.
@@ -35,7 +35,7 @@
 
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र ५ किलोमिटरा परस कमी अंतराचेर आसा.
 
-वैजकी सुविधा (अशासकीय) ==
+== वैजकी सुविधा (अशासकीय) ==
 
 
 
@@ -59,7 +59,7 @@
 गांवांत तळी/कोंड उदक पुरवण आसा.
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 
-नितळसाण ==
+== नितळसाण ==
 गांवांत बंद गटार उपलब्ध ना.
 गांवांत उघडें गटार उपलब्ध आसा.
 नीट जलस्त्रोतांत सोडिल्ले सांड उदक
@@ -71,7 +71,7 @@
 गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध ना.
 
 
-दळणवळण आनीक येरादारी ==
+== दळणवळण आनीक येरादारी ==
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं उपपोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
@@ -101,7 +101,7 @@
 
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग ५ किलोमिटरा परस कमी अंतराचेर आसा.
 
-बाजार आनी सावकारी पेडी ==
+== बाजार आनी सावकारी पेडी ==
 गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत वेपाराविशी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं वेपाराविशी सावकारी पेडी ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत सहकारी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं सहकारी सावकारी पेडी ५ किलोमिटरा परस कमी अंतराचेर आसा.
@@ -112,7 +112,7 @@
 गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
-आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
+== आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
 गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा.
 गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा.
@@ -127,7 +127,7 @@
 गांवांत विधानसभा मतदान केंद्र उपलब्ध आसा.
 गांवांत जन्म मृत्यु नोंदणी केंद्र उपलब्ध ना.सगळ्यांत लागीं जन्म मृत्यु नोंदणी केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
-वीज ==
+== वीज ==
 २४ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण शेतकामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
@@ -153,7 +153,7 @@
 * एकूण बागायत जमीन: १४
 
 
-शिंपणावळ सुविधा ==
+== शिंपणावळ सुविधा ==
 शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
 * कालवे: ०
 * बांयो / कूप नलिका: ०
