*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -15,3 +15,6 @@
 * एकूण साक्षर लोकसंख्या: ३४८४
 * साक्षर पुरुश लोकसंख्या: १६५६ (८४.०२%)
 * साक्षर स्त्री लोकसंख्या: १८२८ (८४.५१%)
+
+== नितळसाण आनी पिवपाचें उदक ==  
+शारांत उकती आनी बंद गटारवेवस्था आसा.
