*Empty MediaWiki Message*

--- a/मडकय.mw
+++ b/मडकय.mw
@@ -63,9 +63,9 @@
 सगळ्यांत लागीं नोकरी करपी बायलांकखातीर सरकारी राबीतो घर (हॉस्टेल) PENHA DE FRANCA CT (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी वृद्धाश्रम बांदोडा CT (५ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी खेळांगण पणजी (२५ किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी चित्रपटगृह पणजी (२५ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी सिनेमाघर पणजी (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी सभाघर फोंडा (१६ किमी) हांगां आसा.
-सगळ्यांत लागीं सरकारी भौशीक ग्रंथालय  फोंडा (१६ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी भौशीक वाचपघर  फोंडा (१६ किमी) हांगां आसा.
 
 == उत्पादन ==
 मडकय ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): STEEL,PHARMACEUTICAL PRODUCT,HOUSE UTENSILS
