*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -18,3 +18,4 @@
 
 == नितळसाण आनी पिवपाचें उदक ==  
 शारांत उकती आनी बंद गटारवेवस्था आसा.
+शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 800 किलो लिटर आसा.
