--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -173,3 +173,4 @@
 * हेर: ०
 
 == उत्पादन ==
+असनोडा ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): COUNTRY LIQUOR,WOODEN FURNITURE,ONION
