--- a/जुवें.mw
+++ b/जुवें.mw
@@ -19,3 +19,5 @@
 == नितळसाण आनी पिवपाचें उदक ==  
 शारांत उकती आनी बंद गटारवेवस्था आसा.
 शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 800 किलो लिटर आसा.
+
+सगळ्यांत लागीं आग पालोवपाची सुविधा PANAJI (२२ किमी) हांगां आसा.
