--- a/आतुर्ली.mw
+++ b/आतुर्ली.mw
@@ -165,7 +165,10 @@
 == उत्पादन ==
 आतुर्ली ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): COCONUTS,COUNTRY LIQUOR,CASHEW NUTS,CASHEW NUTS
 
+
+
 [[Category:devanagari]]	
 [[Category:गोंय़]]
 [[Category:उत्तर गोंय]]
+[[Category:दिवचल तालुका]]
 [[Category:गोंयचीं शारां आनी जागे]]
