--- a/अंदमान_आनी_निकोबार.mw
+++ b/अंदमान_आनी_निकोबार.mw
@@ -34,7 +34,7 @@
 ह्या प्रदेशांत लाकडाचें उत्पन्न भरपूर आयिल्ल्यान लाकडांच्यो तरेकवार वस्तू हे लोक करतात. शिवणकलेंत आनी कशिदा कामांत हांगाच्यो बायलो हुंशार. हे लोक वेता पसून पांटले, कट्टेपसून आयटनां, मातयेचीं आयदनां करतात. भुतांपसून राखण जावंची ह्या हेतान हांगाचे लोक मनशाच्यो तशेंच सवणयांच्यो आनी मोनजातीच्यो लाकडी आकृत्यो करून घरांत दवरतात. नाल्ल, कवासो , केळी, कोंडे आदींच्या पानांचे आनी फुलांचे हार तशेंच तरेकवार वस्तू करतात. शिकारे खातीर हे लोक आडव्या दांड्यार बांदिल्लीं चापाचीं धोणवां तयार करतात. ह्या लोकांचे संगीत आनी नाच सादे पूण पारंपारीक आसतात. ह्या प्रदेशांतल्या दादल्यांचो पुर्विल्लो भेस म्हळ्यार शिंवांचें चामडें कमराक गुठलावप. तेन्ना बायलो तणाचे घागरे घालतालीं. थंय तण आनी रंगीत कपड्यां पसून तयार केल्ल्यो तोपयो आजून वापरतात. हे लोक सरयांनी पैशे गुंथून तयार केल्ल्यो तेचपरी केळ, नाल्ल हांच्या पानांच्यो वा फुलांच्यो वस्ती वापरतात. ओंगी हे जमातींत मेल्ल्या मनशाच्या उगडासाक ताच्या हाडांच्योवस्ती करून घालपाची चाल आसा. दूख, खोस वा कसलीय भावना उक्तावपाक हे लोक आंगाक गेरू, रंगीत माती आनी तेल लायतात. ह्या लोकांचे मखेल आवडटे खेळ म्हळ्यार महड्यांची सर्त, दुकरांची झगडीं, कोंब्यांचीं झगडीं, लाठीमार. सद्या फुटबॉल, व्हॉलीबॉल सारके खेळ ह्या लोकांक आवडूंक लागल्यात.
 
 == '''म्हत्वाचीं थळा''' ==
-अंदमान आनी निकोबार प्रदेशांत पोर्ट ब्लेअर शारांतली नामनेची बंदखण, धबधबे, सगळे कडेन पातळिल्लें दाट रान, उदका वेली भोंवडी, बॅरन नी नारकोंडम हे ज्वालामुखीचे जुंवे, नानकवरी बंदर आदी कितलीशींच थळां पळोवपा सारकीं आसात.<ref>https://wikisource.org/wiki/Index:Konkani_Viswakosh_Vol1.pdf</ref>
+अंदमान आनी निकोबार प्रदेशांत पोर्ट ब्लेअर शारांतली नामनेची बंदखण, धबधबे, सगळे कडेन पातळिल्लें दाट रान, उदका वेली भोंवडी, बॅरन नी नारकोंडम हे ज्वालामुखीचे जुंवे, नानकवरी बंदर आदी  अशीं कितलीशींच थळां पळोवपा सारकीं आसात.<ref>https://wikisource.org/wiki/Index:Konkani_Viswakosh_Vol1.pdf</ref>
 
 =='''संदर्भ'''==
 <references/>
