*Empty MediaWiki Message*

--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -20,4 +20,4 @@
 
 वैजकी सुविधा (शासकीय)
 
-सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १८ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ७४ किमी हांगां आसा. ﻿शारांत १ दवाखानो आसा.
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १८ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ७४ किमी हांगां आसा. ﻿शारांत १ दवाखानो आसा.शारांत १ कुटूंब कल्याण केंद्र आसा. ﻿शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा. सगळ्यांत लागीं प्रसूती केंद्र ५ किमी हांगां आसा. सगळ्यांत लागीं
