*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -21,3 +21,6 @@
 शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 800 किलो लिटर आसा.
 
 सगळ्यांत लागीं आग पालोवपाची सुविधा PANAJI (२२ किमी) हांगां आसा.
+
+== वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय २४ किमी हांगां आसा.
