--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -177,8 +177,9 @@
 
 
 == संदर्भ ==
- 
+ 	
 [[Category:devanagari]]	
 [[Category:गोंय़]]
 [[Category:उत्तर गोंय]]
+[[Category:बारदेस तालुका]]
 [[Category:गोंयचीं शारां आनी जागे]]
