*Empty MediaWiki Message*

--- a/विधवा.mw
+++ b/विधवा.mw
@@ -9,7 +9,7 @@
 भारतांत विधवा बायलांचो आंकडो 34 million आसा अशें आमकां Native Widows In India हांचे संख्याशास्त्र सांगता फुडें तांची अशीं सांगणी आसाः विधवा संख्याशास्त्र घेतली जाल्यार भारताच्यो पयलो क्रम (1st rank ) लागता.
 
 =='''क्रिस्तांव धर्म'''==
-पूराय संवसारांत क्रिस्तांव धर्मांची संख्या खूब व्हड आसा. तांचें पवीत्र [[पुस्तक]] विधवा बायलां विशीं कितें शिकवण दिता कांय? पवीत्र [[पुस्तक]] दोन भागांनी वाटलां, आदलो करार आनी नवो करार. आदलो करार विधवा बायलेक अन्याय करता ते दिसून येता. उत्पत्तीचें [[पुस्तक]] 38:8 “जुदान तेन्ना येराच्या भावाक ओनाक म्हळें, “चल, तुज्या सोंपलेल्या भावाचे बायलेक लागीं एकवट कर तिच्या पतीच्यो भाव कसो हो कायदो तिचे सवें पाळ आनी तुज्या भावाक संसत उतप्पन कर. ”
+पूराय संवसारांत क्रिस्तांव धर्माची संख्या खूब व्हड आसा. तांचें पवीत्र पुस्तक विधवा बायलां विशीं कितें शिकवण दिता कांय? पवीत्र पुस्तक दोन भागांनी वाटलां, आदलो करार आनी नवो करार. आदलो करार विधवा बायलेक अन्याय करता ते दिसून येता. उत्पत्तीचें पुस्तक 38:8 जुदान तेन्ना येराच्या भावाक ओनाक म्हळें, “चल, तुज्या सोंपलेल्या भावाचे बायलेक लागीं एकवट कर तिच्या पतीच्यो भाव कसो हो कायदो तिचे सवें पाळ आनी तुज्या भावाक संसत उतप्पन कर. ”
 विधवा म्हळ्यार मेल्या भावाची म्हालमत्ता (property) अशें जुदेव लोक समजताले. भावा कडेन लग्न जावच्याक वेळार तिची मान्यताय लागनासली. ही चाल आजून पासून इजरायलांत चालीक आसा. घोवाचो भाव समज पिरायेन ल्हान आसलो जाल्यार तो वयार येंव मेरेन तिणें रावंक जाय आसलें. घरकार मेल्या उपरांत तांची गिरेस्तकाय तिका मेळनासली. घोवाची गिरेस्तकाय दादल्याक सोयऱ्याक पावताली. हो मागीर तिचे उदार-पसण पळयतालो. विधवा बायलेक एक वस्त जाल्ल्या भाशेन लेखप आनी तिच्या मोन्यापणाचो फायदो घेवप. तिका समाजाचे देगेक आशिल्या भाशेन लेखताले. जुदेवाचे चाली प्रमाणे एक बायल तीन फावट विधवा जाल्यार तिका प्राण घातकी (fatal) कशी मानताले आनी तिच्यान आनीक लग्न जावंक जायनासलें. म्हायादनीक लग्न जाता तेन्ना तो आपल्याच कुळांतल्या आंकवार चेडवा लागीं ताणें लग्न जावचें. घोव मेल्ले वा घोवान सोडलेले बायले कडेन वा भाड्याक भोंवता तसले कोण न्हय “ अशें लेवी शास्त्राचें [[पुस्तक]] नोंद करता. (lev.29:13) ही चाल आजून इजरायलांत कोहीन जात सांबाळटा.
 नवो करार विधवा बायलेक दयाळ नदरेन पळयता. भागेवंत पावलू तिमोताक बरोवन पयलें चीटींत संदेश दिता. “कोण ना त्यां विधवांक मानान वागय” (1 Tim. 5:3) तशेंच धर्म दुतांच्या इतिहासांत अशें वाचूक मेळटा. “कित्याक दिसपट्टी जेवण वाडटना तांचे विधवाची फावो तें फिकिरीन सेवा जायनासली......... त्या पासत तुमी सात दादल्याक वेचून काडात तांची सेवा करूंक.” (D.I 6:1-7) अशें तरेन विधवा बायलेक जायतें बरेपण मेळ्ळें.
 
