--- a/जुवें.mw
+++ b/जुवें.mw
@@ -24,3 +24,5 @@
 
 == वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय २४ किमी हांगां आसा.
+सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय २८ किमी हांगां आसा.
+शारांत २ दवाखानो आसा.
