--- a/जुवें.mw
+++ b/जुवें.mw
@@ -26,3 +26,5 @@
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय २४ किमी हांगां आसा.
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय २८ किमी हांगां आसा.
 शारांत २ दवाखानो आसा.
+शारांत १ कुटूंब कल्याण केंद्र आसा.
+﻿शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा.
