*Empty MediaWiki Message*

--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -2,13 +2,12 @@
 
 लोकसंख्योप्रमाणे शाराचो दर्जो VI (लोकसंख्या_एकूण < ५,०००). शाराची नागरी स्थीती आसा. 'सर्वेक्षण शार'. १लाखा परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें BELGAUM हें शार १४७ किमी अंतराचेर आसा. ५ लाखां परस चड लोकसंख्या आशिल्ली. सगळ्यांत लागींचें PUNE हें शार ४५९ किमी अंतराचेर आसा. रेल्व स्टेशन १२ किमी अंतराचेर PERNEM हांगां आसा.
 
-हवामान
-
+== '''हवामान''' ==
 पावस (मिमी.): ३११७.१४
 कमाल तापमान (सेल्सिअस): ३१.५३
 किमान तापमान (सेल्सिअस): २३.५१
 
-साक्षरता
+== '''साक्षरता''' ==
 
 एकूण साक्षर लोकसंख्या: ३७५४
 साक्षर पुरुश लोकसंख्या: १९९० (८४.८६%)
