--- a/कासारवर्णें.mw
+++ b/कासारवर्णें.mw
@@ -53,3 +53,13 @@
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं दवाखानो १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+== वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+﻿गांवांत १ प्राथमिक आरोग्य केंद्र आसा.
+﻿गांवांत १ प्राथमिक आरोग्य उपकेंद्र  आसा.
+सगळ्यांत लागीं प्रसूति आनी बालकल्याण केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+﻿गांवांत १ क्षयरोग उपचार केंद्र  आसा.
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं दवाखानो १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
