--- a/जुवें.mw
+++ b/जुवें.mw
@@ -28,3 +28,5 @@
 शारांत २ दवाखानो आसा.
 शारांत १ कुटूंब कल्याण केंद्र आसा.
 ﻿शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा.
+सगळ्यांत लागीं प्रसूती केंद्र १६ किमी हांगां आसा.
+सगळ्यांत लागीं क्षयरोग उपचार केंद्र  २२ किमी हांगां आसा.
