--- a/अकबर.mw
+++ b/अकबर.mw
@@ -11,7 +11,7 @@
 
 == '''भुरगेंपण''' ==
  
-मोगल साम्रज्याची बुन्याद घट करपी ह्या राजाचें भुरगेपण खूब कश्टांत आनी दगदगांत गेलें. तरी आसतना फुडाराक एक प्रशासक म्हूण अकबर बादशाह नामनेक पावलो. ताणें आपल्या साम्राज्याचे 15 विभाग करून सगळ्यांक समान राज्य वेवस्था सुरू केली. शेतवडीक उत्तेजन दिवप, वसुलाची वेवस्था पद्दतशीर दवरप आनी काटकसरीन खर्च करप हें ताचें राज वेवस्थेचें. संबंद लश्करी पुनर्घटना करून मनसबदारी पद्दत ताणें सुरू केली. लोकांची आर्थीक, सामाजीक आनी धार्मीक उदरगत जावंची म्हण ताणें जायते कायदे केले. त्या कायद्यांची अंमलबजावणी जावंची म्हण अधिकारी नेमलें. दिसाचीं सुमार 15-16 वरां तो रालेज्याचो कारभार पळोवपांत सारतालो. हिंदूंक त्रास जाता म्हण तांचे वेले जाझिया कर आनी यात्रा कर ताणें रद्द केले. आपल्या साम्राज्य थापणूके वेळार ताणें हिंदू धर्म- संस्कृतायेचो आदार आनी राजपुतांचो सल्लो घेतलो. हिंदू विशींचें ताचें धोरण उदारपणाचे आशिल्लें.
+मोगल साम्रज्याची बुन्याद घट करपी ह्या राजाचें भुरगेपण खूब कश्टांत आनी दगदगांत गेलें. तरी आसतना फुडाराक एक प्रशासक म्हूण अकबर बादशाह नामनेक पावलो. ताणें आपल्या साम्राज्याचे 15 विभाग करून सगळ्यांक समान राज्य वेवस्था सुरू केली. शेतवडीक उत्तेजन दिवप, वसुलाची वेवस्था पद्दतशीर दवरप आनी काटकसरीन खर्च करप हें ताचें राज वेवस्थेचें खाशेंलेपण. संबंद लश्करी पुनर्घटना करून मनसबदारी पद्दत ताणें सुरू केली. लोकांची आर्थीक, सामाजीक आनी धार्मीक उदरगत जावंची म्हण ताणें जायते कायदे केले. त्या कायद्यांची अंमलबजावणी जावंची म्हण अधिकारी नेमलें. दिसाचीं सुमार 15-16 वरां तो रालेज्याचो कारभार पळोवपांत सारतालो. हिंदूंक त्रास जाता म्हण तांचे वेले जाझिया कर आनी यात्रा कर ताणें रद्द केले. आपल्या साम्राज्य थापणूके वेळार ताणें हिंदू धर्म- संस्कृतायेचो आदार आनी राजपुतांचो सल्लो घेतलो. हिंदू विशींचें ताचें धोरण उदारपणाचे आशिल्लें.
 
 1562 – 1570 ह्या काळांत तो कांय राजपूत राजकुंवरीं कडेन लग्न जालो. ताणें कांय म्हत्वाच्या मनसब खात्यांत आनी तहसील खात्यांत मुखेली म्हण नेमलें. हिंदी रजपूत अकबराचे निश्ठावान सेवक जाल्ले. हिंदूस्थानाक आपलो देश मानपी हो पयलोच मुसलमान बादशाह. सगळे धर्म एकठांय करून एक व्यापक धर्म निर्माण करपाची ताची इत्सा आशिल्ली. ताका अनुसरून 1581 वर्सा ताणें ‘दीने इलाही’ हो सगळ्या धर्मांतल्या वेंचीक तत्वांचेर आदारीत असो नवो धर्म पंथ निर्माण केलो. ‘दीने इलाही’ हाचो अर्थ ‘देवाचो धर्म’. ताका ‘तौहीदे इलाही’ (एकेश्र्वरी धर्म) अशेंय म्हणटात.
 
