--- a/कासारवर्णें.mw
+++ b/कासारवर्णें.mw
@@ -63,3 +63,38 @@
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं दवाखानो १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+== वैजकी सुविधा (अशासकीय) ==
+
+
+
+﻿गांवांत १ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
+
+
+
+﻿गांवांत १ वखदालय आसा.
+
+
+
+== पिवपाचे उदक ==
+गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
+गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण ना.
+गांवांत धापिल्लें बांयचें उदक पुरवण आसा.
+गांवांत उघड्या बांयचें उदक पुरवण आसा.
+गांवांत हॅन्डपंपचें उदक पुरवण ना.
+गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना.
+गांवांत झरीचें उदक पुरवण आसा.
+गांवांत न्हय/खाजनाचें उदक पुरवण आसा.
+गांवांत तळी/कोंड उदक पुरवण आसा.
+गांवांत अन्य पद्धतीचे उदक पुरवण ना.
+
+
+== नितळसाण ==
+गांवांत बंद गटार उपलब्ध ना.
+गांवांत उघडें गटार उपलब्ध आसा.
+नीट जलस्त्रोतांत सोडिल्ले सांड उदक
+हें क्षेत्र पुराय तरेन स्वच्छता अभियानांत ना
+गांवांत न्हाणीघर आनी सार्वजनिक स्वच्छता घर  उपलब्ध ना.
+गांवांत न्हाणीघर सोडून सार्वजनिक स्वच्छता घर उपलब्ध ना.
+गांवांत ग्रामीण उत्पादक केंद्रे ना जाल्यार सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
+गांवांत ग्रामीण सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
+गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध आसा.
