--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -22,4 +22,4 @@
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १८ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ७४ किमी हांगां आसा. ﻿शारांत १ दवाखानो आसा.शारांत १ कुटूंब कल्याण केंद्र आसा. ﻿शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा. सगळ्यांत लागीं प्रसूती केंद्र ५ किमी हांगां आसा. सगळ्यांत लागीं क्षयरोग उपचार केंद्र १८ किमी हांगां आसा. सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा. सगळ्यांत लागीं पशुवैजकी रुग्णालय १८ किमी हांगां आसा. सगळ्यांत लागीं फिरतो दवाखानो ० किमी हांगां आसा. सगळ्यांत लागीं हेर वैजकीय सुविधा ३० किमी हांगां आसा. शारांत १ खाजगी वखदां दुकान आसा.
 
 शैक्षणिक सुविधा
-शारांत ५ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (१२ किमी) हांगां आसा.
+शारांत ५ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (१२ किमी) हांगां आसा.सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (२४ किमी) हांगां आसा.
