--- a/मडकय.mw
+++ b/मडकय.mw
@@ -78,13 +78,8 @@
 == संदर्भ ==
 
 
-
-
-
-
-
 [[Category:devanagari]]	
 [[Category:गोंय़]]
 [[Category:उत्तर गोंय]]
-[[Category:बारदेस तालुका]]
+[[Category:फोंडा तालुका]]
 [[Category:गोंयचीं शारां आनी जागे]]
