--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -24,3 +24,7 @@
 }}
 
 == बस्तोडा  ==
+बस्तोडा हे उत्तर गोवा जिल्ह्यातल्या बार्देस तालुक्यातील ३२२.२१ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ९१७ कुटुंबाचे व पुराय ३९४३ लोकसंख्या आसा. हांगा लागीचे शार MAPUSA २ किलोमीटर अंतरावर आसा. हांगा १९१८ दादले आनीक २०२५ बायला आसा. हांगा अनुसूचित जातीचे लोक १९१ आसून अनुसूचित जमातीचे ३३ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६६७८  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
+
+== साक्षरताय ==
