*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -30,3 +30,5 @@
 ﻿शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा.
 सगळ्यांत लागीं प्रसूती केंद्र १६ किमी हांगां आसा.
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  २२ किमी हांगां आसा.
+सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा.
+सगळ्यांत लागीं पशुवैजकी रुग्णालय  २८ किमी हांगां आसा.
