--- a/कासारवर्णें.mw
+++ b/कासारवर्णें.mw
@@ -123,3 +123,13 @@
 राज्य महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राज्य महामार्ग १० किलोमिटर परस चड अंतराचेर आसा.
 जिल्ल्यातलो मुखेल रस्तो गांवाक जोडला.
 जिल्ल्यातलो अन्य रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो अन्य रस्तो १० किलोमिटर परस चड अंतराचेर आसा.
+== बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत वेपाराविशी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं वेपाराविशी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत सहकारी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं सहकारी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत शेतकी कर्ज संस्था उपलब्ध ना.सगळ्यांत लागीं शेतकी कर्ज संस्था १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत स्वयंसहाय्य गट उपलब्ध आसा.
+गांवांत रेशन मांड उपलब्ध आसा.
+गांवांत मंडी / कायमचे बाजार उपलब्ध ना.सगळ्यांत लागीं मंडी / कायमचे बाजार १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती १० किलोमिटर परस चड अंतराचेर आसा.
