--- a/जुवें.mw
+++ b/जुवें.mw
@@ -32,3 +32,5 @@
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  २२ किमी हांगां आसा.
 सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय  २८ किमी हांगां आसा.
+सगळ्यांत लागीं फिरतो दवाखानो ० किमी हांगां आसा.
+सगळ्यांत लागीं हेर वैजकीय सुविधा ३३ किमी हांगां आसा.
