--- a/असोल्डें.mw
+++ b/असोल्डें.mw
@@ -34,15 +34,15 @@
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. 
 गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
 ﻿गांवांत १ खाजगी माध्यमिक शाळा आसा.
-सगळ्यांत लागीं उच्च माध्यमिक शाळा (QUEPEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वैवस्थापन  संस्था  (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं पॉलिटेक्निक (CURCHOREM-CACORA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (CURCHOREM-CACORA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा केपें ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय केपें ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय बांबोळे १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक कुडचड्या-काकोडा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा कुडचड्या-काकोडा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
 
 == वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
