--- a/जुवें.mw
+++ b/जुवें.mw
@@ -34,3 +34,5 @@
 सगळ्यांत लागीं पशुवैजकी रुग्णालय  २८ किमी हांगां आसा.
 सगळ्यांत लागीं फिरतो दवाखानो ० किमी हांगां आसा.
 सगळ्यांत लागीं हेर वैजकीय सुविधा ३३ किमी हांगां आसा.
+
+शारांत १ खाजगी वखदां दुकान आसा.
