*Empty MediaWiki Message*

--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -23,4 +23,4 @@
 
 शैक्षणिक सुविधा
 शारांत ५ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (१२ किमी) हांगां आसा.सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (२४ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय पदवी महाविद्यालय (कला आणी वाणिज्य) PERNEM RURAL (१४ किमी) हांगां आसा.
-सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" MAPUSA (१२ किमी) हांगां आसा.
+सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" MAPUSA (१२ किमी) हांगां आसा.सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (२४ किमी) हांगां आसा.
