--- a/कासारवर्णें.mw
+++ b/कासारवर्णें.mw
@@ -156,3 +156,25 @@
 २४ वरां वीज पुरवण वेपाराविशी कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+== जमिनीचो वापर ==
+कासारवर्णें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : २१०.९१
+* शेतकामा खातीर ना वापरिल्ली जमीन: १७०.६
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: २०४.६
+* कायमस्वरूपी पडीक जमीन: ०
+* सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: ५२९.६७
+* एकूण कोरड व्हांवपी जमीन: ५०९.२३
+* एकूण बागायत जमीन: २०.४४
+
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: २०.४४
