--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -37,3 +37,5 @@
 गांवांत ३ शासकीय पूर्व-प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी पूर्व-प्राथमिक शाळा आसा.
 गांवांत २ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
 गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
+﻿गांवांत १ खाजगी माध्यमिक शाळा आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (MAPUSA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
