--- a/कासारवर्णें.mw
+++ b/कासारवर्णें.mw
@@ -178,3 +178,13 @@
 * तळी: ०
 * ओढे: ०
 * हेर: २०.४४
+== उत्पादन ==
+कासारवर्णें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,CHILLIES,CASHEW NUTS
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[पेडणें]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
