--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -39,3 +39,5 @@
 गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
 ﻿गांवांत १ खाजगी माध्यमिक शाळा आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (MAPUSA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (MAPUSA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA CT) १० किलोमिटर परस चड अंतराचेर आसा.
