--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -45,3 +45,5 @@
 सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MAPUSA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MAPUSA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
