--- a/जुवें.mw
+++ b/जुवें.mw
@@ -41,3 +41,4 @@
 शारांत ३ शासकीय प्राथमिक शाळा आसा. ﻿शारांत १ खाजगी प्राथमिक शाळा आसा.
 शारांत २ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.  
  शारांत २ खाजगी माध्यमिक शाळा आसा.
+सगळ्यांत लागीं शासकीय उच्च माध्यमिक शाळा CANDOLA CT (४ किमी) हांगां आसा.
