*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -42,3 +42,6 @@
 शारांत २ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.  
  शारांत २ खाजगी माध्यमिक शाळा आसा.
 सगळ्यांत लागीं शासकीय उच्च माध्यमिक शाळा CANDOLA CT (४ किमी) हांगां आसा.
+
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) PANAJI (२२ किमी) हांगां आसा.
+  सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (२२ किमी) हांगां आसा.
