--- a/जुवें.mw
+++ b/जुवें.mw
@@ -45,3 +45,5 @@
 
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) PANAJI (२२ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (२२ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) GOAVELHA CT (१८ किमी) हांगां आसा.
+  सगळ्यांत लागीं "शासकीय पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (४ किमी) हांगां आसा.
