*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -47,3 +47,5 @@
   सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (२२ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) GOAVELHA CT (१८ किमी) हांगां आसा.
   सगळ्यांत लागीं "शासकीय पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (४ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (२२ किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (२२ किमी) हांगां आसा.
