--- a/जुवें.mw
+++ b/जुवें.mw
@@ -49,3 +49,5 @@
   सगळ्यांत लागीं "शासकीय पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (४ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (२२ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (२२ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PANAJI (२२ किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM CT (२४ किमी) हांगां आसा.
