*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -51,3 +51,5 @@
   सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (२२ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PANAJI (२२ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM CT (२४ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA CT (१५ किमी) हांगां आसा.
+  सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  PANAJI (२२ किमी) हांगां आसा.
