--- a/जुवें.mw
+++ b/जुवें.mw
@@ -53,3 +53,5 @@
   सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM CT (२४ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA CT (१५ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  PANAJI (२२ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (२२ किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा PANAJI (२० किमी) हांगां आसा.
