*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -55,3 +55,5 @@
   सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  PANAJI (२२ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (२२ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा PANAJI (२० किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PANAJI (२२ किमी) हांगां आसा.
+  सगळ्यांत लागीं खाजगी अपंगां खातीर खाशेली शाळा ELLA (१० किमी) हांगां आसा.
