*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -57,3 +57,7 @@
   सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा PANAJI (२० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PANAJI (२२ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी अपंगां खातीर खाशेली शाळा ELLA (१० किमी) हांगां आसा.
+== सुविधा ==
+  सगळ्यांत लागीं शासकीय अनाथाश्रम PANAJI (२० किमी) हांगां आसा.
+  सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (२८ किमी) हांगां आसा.
+ ﻿शारांत १ खाजगी वृद्धाश्रम आसा.
