--- a/असोळणा.mw
+++ b/असोळणा.mw
@@ -35,15 +35,15 @@
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
 गांवांत २ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
 गांवांत २ खाजगी माध्यमिक शाळा आसा.
-सगळ्यांत लागीं उच्च माध्यमिक शाळा (CHINCHINIM CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
-सगळ्यांत लागीं पदवी महाविद्यालय (CUNCOLIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
-सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं पॉलिटेक्निक (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (CHINCHINIM CT) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा चिंचोणे ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय कुंकळ्ळे ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय बांबोळे १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  चिंचोणे ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
 
 == वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
