*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -61,3 +61,5 @@
   सगळ्यांत लागीं शासकीय अनाथाश्रम PANAJI (२० किमी) हांगां आसा.
   सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (२८ किमी) हांगां आसा.
  ﻿शारांत १ खाजगी वृद्धाश्रम आसा.
+सगळ्यांत लागीं शासकीय खेळांगण PANAJI (२२ किमी) हांगां आसा.
+  सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (२२ किमी) हांगां आसा.
