*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -63,3 +63,5 @@
  ﻿शारांत १ खाजगी वृद्धाश्रम आसा.
 सगळ्यांत लागीं शासकीय खेळांगण PANAJI (२२ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (२२ किमी) हांगां आसा.
+﻿शारांत १ खाजगी सभाघर आसा.  
+  सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  PANAJI (२२ किमी) हांगां आसा.
