*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -65,3 +65,6 @@
   सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (२२ किमी) हांगां आसा.
 ﻿शारांत १ खाजगी सभाघर आसा.  
   सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  PANAJI (२२ किमी) हांगां आसा.
+
+== उत्पादन ==
+जुवें ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): RICE PRODUCTS,VEGETABLE
