--- a/अडणें.mw
+++ b/अडणें.mw
@@ -56,13 +56,13 @@
 
 == साक्षरताय ==  
 * वट्ट साक्षर लोकसंख्या: १२११
-* साक्षर पुरुश लोकसंख्या: ६५० (७७.३८%)
-* साक्षर स्त्री लोकसंख्या: ५६१ (६८.६७%)
+* साक्षर दादल्यांची लोकसंख्या: ६५० (७७.३८%)
+* साक्षर बायलांची लोकसंख्या: ५६१ (६८.६७%)
 
 
 == शैक्षणिक सुविधा ==  
  
-सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (BALI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत ३ शासकीय प्राथमिक शाळा आसा. 
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (BALI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (BALI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
