--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -62,3 +62,16 @@
 सगळ्यांत लागीं पशुवैजकी रुग्णालय ५ किलोमिटरा परस कमी अंतराचेर आसा.
 
 ﻿गांवांत १ कुटुंब कल्याणकेंद्र आसा.
+== वैजकी सुविधा (अशासकीय) ==
+
+
+
+
+
+
+
+
+
+
+
+== पिवपाचे उदक ==
