--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -26,3 +26,4 @@
 सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" MAPUSA (१२ किमी) हांगां आसा.सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (२४ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (२४ किमी) हांगां आसा.सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर MAPUSA (१२ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM CT (३६ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA CT (५६ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (२४ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (२८ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा MAPUSA (१४ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PENHA DE FRANCA CT (२४ किमी) हांगां आसा.सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA CT (२४ किमी) हांगां आसा.
 
 सुविधा
+पार्शें ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): CASHEW NUTS,COUNTRY LIQUOR,RICE PRODUCTS
