--- a/अवेडें.mw
+++ b/अवेडें.mw
@@ -38,12 +38,12 @@
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
 गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
 गांवांत १ खाजगी माध्यमिक शाळा आसा.
-सगळ्यांत लागीं उच्च माध्यमिक शाळा (PARODA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
-सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं पॉलिटेक्निक (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा पारोडा ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय केपें ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय बांबोळे १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक कुडचड्या- १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
