--- a/विधवा.mw
+++ b/विधवा.mw
@@ -13,8 +13,8 @@
 विधवा म्हळ्यार मेल्ल्या भावाची म्हालमत्ता (property) अशें जुदेव लोक समजताले. भावा कडेन लग्न जावच्याक वेळार तिची मान्यताय लागनासली. ही चाल आजून पासून इजरायलांत चालीक आसा. घोवाचो भाव समज पिरायेन ल्हान आसलो जाल्यार तो वयार येंव मेरेन तिणें रावंक जाय आसलें. घरकार मेल्या उपरांत तांची गिरेस्तकाय तिका मेळनासली. घोवाची गिरेस्तकाय दादल्या सोयऱ्याक पावताली. हो मागीर तिचे उदार-पसण पळयतालो. विधवा बायलेक एक वस्त जाल्ल्या भाशेन लेखप आनी तिच्या मोन्यापणाचो फायदो घेवप. तिका समाजाचे देगेक आशिल्या भाशेन लेखताले. जुदेवाचे चाली प्रमाणे एक बायल तीन फावट विधवा जाल्यार तिका प्राण घातकी (fatal) कशी मानताले आनी तिच्यान आनीक लग्न जावंक जायनासलें. म्हायादनीक लग्न जाता तेन्ना तो आपल्याच कुळांतल्या आंकवार चेडवा लागीं ताणें लग्न जावचें. घोव मेल्ले वा घोवान सोडलेले बायले कडेन वा भाड्याक भोंवता तसले कोण न्हय “ अशें लेवी शास्त्राचें पुस्तक नोंद करता. (lev.29:13) ही चाल आजून इजरायलांत कोहीन जात सांबाळटा.
 नवो करार विधवा बायलेक दयाळ नदरेन पळयता. भागेवंत पावलू तिमोताक बरोवन पयलें चीटींत संदेश दिता. “कोण ना त्यां विधवांक मानान वागय” (1 Tim. 5:3) तशेंच धर्म दुतांच्या इतिहासांत अशें वाचूक मेळटा. “कित्याक दिसपट्टी जेवण वाडटना तांचे विधवाची फावो तें फिकिरीन सेवा जायनासली......... त्या पासत तुमी सात दादल्याक वेचून काडात तांची सेवा करूंक.” (D.I 6:1-7) अशें तरेन विधवा बायलेक जायतें बरेपण मेळ्ळें.
 
-=='''इजलाम धर्म'''==
-आराब लोक इजलाम धर्म पाळचे पयली, तांची चाल आसली ती म्हळ्यार “घोवाच्या व्हडल्या चलयान विधवे कडेन लग्न जावंक जाय आसलें. हो चलो तिचो न्हय घोवाचे आनी दुसरे बायलेचो” कुराण ही असली नश्टी चाल पयस दवरता. “तुजो बापूय लग्न जाले बायले कडेन तुवें लग्न जावचें न्हय, अशें करप म्हळ्यार एक कंटाळो वा लजेची गजाल” (Quran 4:22) कुराणांत अशें बरयल्ले वाचूंक मेळटा. “घरकार मेल्या उपरांत बायलेन चार म्हयने आनीक धा दीस रावपाक जाय अशें केल्यार घोवाचेर कसलेंच वायट येवचे ना” (Quran 22:34) फुडें अशें बरयल्ले आसा. “जर तर घरकार मेलो जाल्यार विधवा बायलेक एक वर्सांचे उदार-पसण फावो जावंक जाय तशेंच रावपाची सवलत मेळूंक जाय (Quran 2:240)” कुराणा प्रमाणे विधवा बायलेक जायतें बरेपण फावता, तिका परतून लग्न जावपाक मेळटा तें बरें आसा तेंच बरोबर तिची उकलणी केल्लीं दिसता.
+=='इजलाम धर्म'==
+आराब लोक इजलाम धर्म पाळचे पयली, तांची चाल आसली ती म्हळ्यार 'घोवाच्या व्हडल्या चलयान विधवे कडेन लग्न जावंक जाय आसलें. हो चलो तिचो न्हय घोवाचे आनी दुसरे बायलेचो' कुराण ही असली नश्टी चाल पयस दवरता. “तुजो बापूय लग्न जाले बायले कडेन तुवें लग्न जावचें न्हय, अशें करप म्हळ्यार एक कंटाळो वा लजेची गजाल” (Quran 4:22) कुराणांत अशें बरयल्ले वाचूंक मेळटा. “घरकार मेल्या उपरांत बायलेन चार म्हयने आनीक धा दीस रावपाक जाय अशें केल्यार घोवाचेर कसलेंच वायट येवचे ना” (Quran 22:34) फुडें अशें बरयल्ले आसा. “जर तर घरकार मेलो जाल्यार विधवा बायलेक एक वर्सांचे उदार-पसण फावो जावंक जाय तशेंच रावपाची सवलत मेळूंक जाय (Quran 2:240)” कुराणा प्रमाणे विधवा बायलेक जायतें बरेपण फावता, तिका परतून लग्न जावपाक मेळटा तें बरें आसा तेंच बरोबर तिची उकलणी केल्लीं दिसता.
 
 =='''हिन्दू धर्म आनी चाली रिती'''==
 हिन्दू धर्मांत एके वटेन बायलेक देवी कशी पुजतात तिका पांय पडटात आनी हातूय जोडटात. जाल्यार दुसरे वटेन तिका वस्तू समान लेखतात. भगवतगितांत अशें वाचूंक मेळटा. “where women is respected there the God reside” आनीक एके कडेन अशेंय बरयलां “Women are like sudras, low in birth ” तिणें आदल्या जिवीतांत पातक आदरलां देखून तिका हें भोगचें पडटा. विष्णूस्मृती ह्या [[पुस्तक]]ांत अशें नोंद केल्लें आसा. “एके बायलेचो घोव मेलो जाल्यार तिणें निर्मळ आनी पवित्र जिवीत जगूंक जाय, ना जाल्यार घोवा बरोबर उडी मारून मरूंक जाय. (विष्णूस्मूती-XXV:14) घोव मेल्ले बायलेक दळीद्र म्हूण लेखतात (bad women) तिणें धर्मीक रितींनी वांटो घेवंक जायना. तांबडें न्हेसूंक जायना, मास खावंक जायना, कांकणा फोडप, बिंदी काडप, धवें न्हेसप”
