--- a/अँग्लो_इंडियन_साहित्य.mw
+++ b/अँग्लो_इंडियन_साहित्य.mw
@@ -1,7 +1,7 @@
 == अँग्लो इंडियन साहित्य: ==
-अँग्लो इंडियन साहित्य म्हळ्यार चड करून ब्रिटिशांच्या काळांत भारतांत रावपी कांय इंग्लीश मनशांनी बरयिल्लें साहित्य. इंडो अँग्लियन साहित्या कडेन हाचो स्पश्ट दिसपी फरक म्हळ्यार अँग्लो इंडियन साहित्य निर्मीतल्या बरोवप्यांनी हांगाचे भुंये कडेन खोल नातें दाखोवंक ना. ते आपले संवेदनशीलतेच्या बाबतींत आनी विचारांच्या बाबतींत इंग्लीशच उरले. जरी [[ब्रिटीश]] संस्कृतायेचें पडबिंब पडिल्ल्या भारतीय जीणेचें तांणी चित्रण केलें, तरी तांची इंग्लेज जीणे कडेन आशिल्लीं निश्ठा आनी इंग्लेज वाचप्यां कडेन पावपाचो हेतू स्पश्टपणान दिसून येता.
+अँग्लो इंडियन साहित्य म्हळ्यार चड करून ब्रिटिशांच्या काळांत भारतांत रावपी कांय इंग्लीश मनशांनी बरयिल्लें साहित्य. इंडो अँग्लियन साहित्या कडेन हाचो स्पश्ट दिसपी फरक म्हळ्यार अँग्लो इंडियन साहित्य निर्मीतल्या बरोवप्यांनी हांगाचे भुंये कडेन खोल नातें दाखोवंक ना. ते आपले संवेदनशीलतेच्या बाबतींत आनी विचारांच्या बाबतींत इंग्लीशच उरले. जरी [[ब्रिटीश]] संस्कृतायेचें पडबिंब पडिल्ल्या भारतीय जीणेचें तांणी चित्रण केलें, तरी तांची इंग्लेज जीणे कडेन आशिल्ली निश्ठा आनी इंग्लेज वाचप्यां कडेन पावपाचो हेतू स्पश्टपणान दिसून येता.
 
-सगळ्यांत पयलीं अँग्लो इंडियन बरपावळ म्हूण [[गोंय]]ांत आयिल्ल्या फादर थॉमस स्टीफन्स ( १५४९-१६१९ ) हाचे बरपावळीचो उल्लेख जाता. ताणें आपल्या बापायक बरयिल्ल्या पत्रांचो ह्या साहित्यांत आस्पाव जाता. ह्याच काळांत लंडनचो वेपारी मास्टर राल्फ फिच हाणें आपल्या भारतांतल्या आनी उदेंतेच्या भोंवडे वर्णनांतल्यान आपल्या साहसांविशीं बरयलां. हीं भोंवडी ताणें १५८३ ते १५९१ ह्या काळांत केल्ली.
+सगळ्यांत पयलीं अँग्लो इंडियन बरपावळ म्हूण गों आयिल्ल्या फादर थॉमस स्टीफन्स ( १५४९-१६१९ ) हाचे बरपावळीचो उल्लेख जाता. ताणें आपल्या बापायक बरयिल्ल्या पत्रांचो ह्या साहित्यांत आस्पाव जाता. ह्याच काळांत लंडनचो वेपारी मास्टर राल्फ फिच हाणें आपल्या भारतांतल्या आनी उदेंतेच्या भोंवडे वर्णनांतल्यान आपल्या साहसांविशीं बरयलां. हीं भोंवडी ताणें १५८३ ते १५९१ ह्या काळांत केल्ली.
 
 खऱ्या अर्थान भारतांत इंग्लेज साहित्य आनी साहित्याविशीं अभ्यास वॉरन हेस्टिंग हाच्या कारकिर्दीच्या शेवटाक (१७७४ - १७८४) सुरू जालो. अठराव्या शतमानाचो चडसो वांटो साहित्याचे नदरेंतल्यान फळादीक थारलो ना, आनी ताच्या फुडल्या शंबर वर्सांनी जें अँग्लो इंडियन साहित्य निर्माण जालें, तें भोंवडे वर्णनाच्या रूपांत आसा. हातूंत मोगल दरबार आनी त्या काळच्या भारतांतल्या विंगड विंगड प्रांतांतल्या राजकारणा विशीं बरींच वर्णनां आसात. ह्या भोंवडेकाणयांनी त्या बरोवपी लेखकांची साधी सोपी शैली दिश्टी पडटा.
 
