--- a/अडणें.mw
+++ b/अडणें.mw
@@ -223,10 +223,7 @@
 
 
 == उत्पादन ==
-अडणें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,CASHEW NUTS
-
-
-
+अडणें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): तांदूळ,काजूबियो
 
 == संदर्भ ==
 
