--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -28,3 +28,4 @@
 सुविधा
 
 सगळ्यांत लागीं खाजगी अऩाथाश्रम PANAJI (३० किमी) हांगां आसा.
+सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (२४ किमी) हांगां आसा.
