*Empty MediaWiki Message*

--- a/अडणें.mw
+++ b/अडणें.mw
@@ -64,8 +64,8 @@
  
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत ३ शासकीय प्राथमिक शाळा आसा. 
-सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (BALI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
-सगळ्यांत लागीं माध्यमिक शाळा (BALI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (CUNCOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
