*Empty MediaWiki Message*

--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -30,3 +30,4 @@
 सगळ्यांत लागीं खाजगी अऩाथाश्रम PANAJI (३० किमी) हांगां आसा.
 सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (२४ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वृद्धाश्रम SIOLIM CT (१० किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (१५ किमी) हांगां आसा.
