*Empty MediaWiki Message*

--- a/अकबर.mw
+++ b/अकबर.mw
@@ -13,7 +13,7 @@
  
 मोगल साम्रज्याची बुन्याद घट करपी ह्या राजाचें भुरगेपण खूब कश्टांत आनी दगदगांत गेलें. तरी आसतना फुडाराक एक प्रशासक म्हूण अकबर बादशाह नामनेक पावलो. ताणें आपल्या साम्राज्याचे 15 विभाग करून सगळ्यांक समान राज्य वेवस्था सुरू केली. शेतवडीक उत्तेजन दिवप, वसुलाची वेवस्था पद्दतशीर दवरप आनी काटकसरीन खर्च करप हें ताचें राज वेवस्थेचें खाशेंलेपण. सबंद लश्करी पुनर्घटना करून मनसबदारी पद्दत ताणें सुरू केली. लोकांची आर्थीक, सामाजीक आनी धार्मीक उदरगत जावंची म्हण ताणें जायते कायदे केले. त्या कायद्यांची अंमलबजावणी जावंची म्हण अधिकारी नेमलें. दिसाचीं सुमार 15-16 वरां तो राज्याचो कारभार पळोवपांत सारतालो. हिंदूंक त्रास जाता म्हण तांचे वेले जिझिया कर आनी यात्रा कर ताणें रद्द केले. आपल्या साम्राज्य थापणूके वेळार ताणें हिंदू धर्म- संस्कृतायेचो आदार आनी राजपुतांचो सल्लो घेतलो. हिंदू विशींचें ताचें धोरण उदारपणाचे आशिल्लें.
 
-1562 – 1570 ह्या काळांत तो कांय राजपूत राजकुंवरीं कडेन लग्न जालो. ताणें कांय रजपुतांक म्हत्वाच्या मनसब खात्यांत आनी तहसील खात्यांत मुखेली म्हण नेमलें. हिंदू रजपूत अकबराचे निश्ठावान सेवक जाल्ले. हिंदूस्थानाक आपलो देश मानपी हो पयलोच मुसलमान बादशाह. सगळे धर्म एकठांय करून एक व्यापक धर्म निर्माण करपाची ताची इत्सा आशिल्ली. ताका अनुसरून 1581 वर्सा ताणें ‘दीन-ए-इलाही’ हो सगळ्या धर्मांतल्या वेंचीक तत्वांचेर आदारीत असो नवो धर्म पंथ निर्माण केलो. ‘दीने इलाही’ हाचो अर्थ ‘देवाचो धर्म’. ताका ‘तौहीदे इलाही’ (एकेश्र्वरी धर्म) अशेंय म्हणटात.
+1562 – 1570 ह्या काळांत तो कांय राजपूत राजकुंवरीं कडेन लग्न जालो. ताणें कांय रजपुतांक म्हत्वाच्या मनसब खात्यांत आनी तहसील खात्यांत मुखेली म्हण नेमलें. हिंदू रजपूत अकबराचे निश्ठावान सेवक जाल्ले. हिंदूस्थानाक आपलो देश मानपी हो पयलोच मुसलमान बादशाह. सगळे धर्म एकठांय करून एक व्यापक धर्म निर्माण करपाची ताची इत्सा आशिल्ली. ताका अनुसरून 1581 वर्सा ताणें ‘दीन-ए-इलाही’ हो सगळ्या धर्मांतल्या वेंचीक तत्वांचेर आदारीत असो नवो धर्म पंथ निर्माण केलो. ‘दीन-ए- इलाही’ हाचो अर्थ ‘देवाचो धर्म’. ताका ‘तौहीदे इलाही’ (एकेश्र्वरी धर्म) अशेंय म्हणटात.
 
 नवरोजा सारके कांय पारशी सण तो मनयतालो. तो सुर्याचीय उपासना करतालो. जैन धर्माचो ताचेर प्रभाव पडिल्लो. पूण हिंदूच्या दिवाळे सारक्या परबेंत तो खोशयेन वांटो घेतालो. ताणें आपल्या राजवटींत साहित्य, संगीत आनी कला हांची खूब उदरगत केली. तानसेन, बाबा रामदास, बैजू बावरा हे नामनेचे गवय आनी फैझी, अबुल फजल, बदायुनी, बिरबल, तोडरमल, मानसिंग सारकील्या नामनेच्या पंडितांक ताणें आपल्या दरबारांत आलाशिरो दिलो. ताणें फारसी आनी संस्कृत साहित्य- निर्मणेच्या वावराक खूब उर्बा दिल्ली. अथर्ववेद, भगवद्गीता, रामायण, महाभारत, हरिवंश, लीलावती, पंचतंत्र ह्या संस्कृत ग्रंथांचे ताणें विद्वाना कडल्यान फारसी भाशेंत अणकार करून घेतले. निजीमुद्दीन, बदायुनी ह्या इतिहासकारांनी पार्सी भाशेंत इतिहास बरयले. अकबराचे जिणेचेर बरयल्लो अबुल फज्ल हाचो ‘अकबरनामा’ हो ग्रंथ खूब नांवाजल्लो आसा. तुलसीदास, सुरदास, रहीम, रसखान, बिरबल आनी भक्तीपंथाचो म्हान फुडारी विठ्ठलनाथ हे म्हान कवी ताच्या काळांत जावन गेले.
 
