*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -1,1 +1,1 @@
-गिरीं हें उत्तर गोवा जिल्ल्यांतल्या बार्देस तालुक्यांतलें ४.०३ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत ११७८ कुटुंबां वा वट्ट ५०३६ लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.राज्याची राजधानी PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.
+गिरीं हें उत्तर गोवा जिल्ल्यांतल्या बार्देस तालुक्यांतलें ४.०३ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत ११७८ कुटुंबां वा वट्ट ५०३६ लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.राज्याची राजधानी PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.हातूंत २५०२ दादले आनी २५३४ बांयलां आसात.
