--- a/बाळ्ळी.mw
+++ b/बाळ्ळी.mw
@@ -39,7 +39,7 @@
 ﻿गांवांत १ शासकीय माध्यमिक शाळा आसा. 
 गांवांत १ खाजगी उच्च माध्यमिक शाळा आसा.
 ﻿गांवांत १ खाजगी पदवी महाविद्यालय आसा.
-सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय वेग्णा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
