/* वैजकी सुविधा (अशासकीय) */

--- a/भुंयपाल.mw
+++ b/भुंयपाल.mw
@@ -41,7 +41,7 @@
 गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
 गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण ना.
 गांवांत धापिल्लें बांयचें उदक पुरवण आसा.
-गांवांत उघड्या बांयचें उदक पुरवण ना.
+गांवांत उगड्या बांयचें उदक पुरवण ना.
 गांवांत हॅन्डपंपचें उदक पुरवण आसा.
 गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना.
 गांवांत झरीचें उदक पुरवण ना.
@@ -87,8 +87,6 @@
 जिल्ल्यातलो अन्य रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो अन्य रस्तो ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग १० किलोमिटर परस चड अंतराचेर आसा.
-
-
 
 == बाजार आनी सावकारी पेडी ==
 गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम १० किलोमिटर परस चड अंतराचेर आसा.
