--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -125,3 +125,6 @@
 
 
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+
+== बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ किलोमिटरा परस कमी अंतराचेर आसा.
