--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -3,4 +3,4 @@
 लोकसंख्योप्रमाणे शाराचो दर्जो V (लोकसंख्या_एकूण ५,००० to ९,९९९).
 शाराची नागरी स्थीती आसा. 'सर्वेक्षण शार'
 
-१  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें BELGAUM हें शार १६९ किमी अंतराचेर आसा.
+१  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें BELGAUM हें शार १६९ किमी अंतराचेर आसा.५  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें PUNE हें शार ४७० किमी अंतराचेर आसा.
