--- a/अडणें.mw
+++ b/अडणें.mw
@@ -66,8 +66,8 @@
 गांवांत ३ शासकीय प्राथमिक शाळा आसा. 
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
-सगळ्यांत लागीं उच्च माध्यमिक शाळा (CUNCOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (कुंकळे) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (केपें) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (कुडचडे- काकोडा) १० किलोमिटर परस चड अंतराचेर आसा.
