*Empty MediaWiki Message*

--- a/विधवा.mw
+++ b/विधवा.mw
@@ -16,8 +16,8 @@
 =='इजलाम धर्म'==
 आराब लोक इजलाम धर्म पाळचे पयली, तांची चाल आसली ती म्हळ्यार 'घोवाच्या व्हडल्या चल्यान विधवे कडेन लग्न जावंक जाय आसलें. हो चलो तिचो न्हय घोवाचे आनी दुसरे बायलेचो' कुराण ही असली नश्टी चाल पयस दवरता. “तुजो बापूय लग्न जाल्ले बायले कडेन तुवें लग्न जावचें न्हय, अशें करप म्हळ्यार एक कंटाळो वा लजेची गजाल” (Quran 4:22) कुराणांत अशें बरयल्ले वाचूंक मेळटा. “घरकार मेल्या उपरांत बायलेन चार म्हयने आनीक धा दीस रावपाक जाय अशें केल्यार घोवाचेर कसलेंच वायट येवचे ना” (Quran 22:34) फुडें अशें बरयल्ले आसा. “जर तर घरकार मेलो जाल्यार विधवा बायलेक एक वर्सांचे उदार-पसण फावो जावंक जाय तशेंच रावपाची सवलत मेळूंक जाय (Quran 2:240)” कुराणा प्रमाणे विधवा बायलेक जायतें बरेपण फावता, तिका परतून लग्न जावपाक मेळटा तें बरें आसा तेंच बरोबर तिची उकलणी केल्लीं दिसता.
 
-=='''हिन्दू धर्म आनी चाली रिती'''==
-हिन्दू धर्मांत एके वटेन बायलेक देवी कशी पुजतात तिका पांय पडटात आनी हातूय जोडटात. जाल्यार दुसरे वटेन तिका वस्तू समान लेखतात. भगवतगितांत अशें वाचूंक मेळटा. “where women is respected there the God reside” आनीक एके कडेन अशेंय बरयलां “Women are like sudras, low in birth ” तिणें आदल्या जिवीतांत पातक आदरलां देखून तिका हें भोगचें पडटा. विष्णूस्मृती ह्या [[पुस्तक]]ांत अशें नोंद केल्लें आसा. “एके बायलेचो घोव मेलो जाल्यार तिणें निर्मळ आनी पवित्र जिवीत जगूंक जाय, ना जाल्यार घोवा बरोबर उडी मारून मरूंक जाय. (विष्णूस्मूती-XXV:14) घोव मेल्ले बायलेक दळीद्र म्हूण लेखतात (bad women) तिणें धर्मीक रितींनी वांटो घेवंक जायना. तांबडें न्हेसूंक जायना, मास खावंक जायना, कांकणा फोडप, बिंदी काडप, धवें न्हेसप”
+=='हिन्दू धर्म आनी चाली रिती'==
+हिन्दू धर्मांत एके वटेन बायलेक देवी कशी पुजतात, तिका पांय पडटात आनी हातूय जोडटात. जाल्यार दुसरे वटेन तिका वस्तू समान लेखतात. भगवतगितांत अशें वाचूंक मेळटा, “where women is respected there the God reside” आनीक एके कडेन अशेंय बरयलां “Women are like sudras, low in birth ” तिणें आदल्या जिवीतांत पातक आदरलां देखून तिका हें भोगचें पडटा. विष्णूस्मृती ह्या पुस्तकांत अशें नोंद केल्लें आसा. “एके बायलेचो घोव मेलो जाल्यार तिणें निर्मळ आनी पवित्र जिवीत जगूंक जाय, ना जाल्यार घोवा बरोबर उडी मारून मरूंक जाय. (विष्णूस्मूती-XXV:14) घोव मेल्ले बायलेक दळीद्र म्हूण लेखतात (bad women) तिणें धर्मीक रितींनी वांटो घेवंक जायना. तांबडें न्हेसूंक जायना, मास खावंक जायना, कांकणा फोडप, बिंदी काडप, धवें न्हेसप”
 हेंच विशीं न.ध. बोरकार अशें बरयता. “विधवेन फुलां माळूंक जायना, तिणें कपलाक कुंकूम लावंक जायना, बरीं कापडां न्हेसून नटूंक जायना, परपुरूशा कडेन उलोवंक जायना, चार चवगां मदीं उठ बस करूंक जायना, धर्मा कार्याक वांटो घेवंक जायना, तुळशीकडेन आनी देवाऱ्यांतल्या देवा कडेन दिवो वा वात लावंक जायना, देव कार्या खातीर फुलां तोडूंक जायना, पोरसांत अळमी आयली जाल्यार तांकां आफडूंक जायान तशें केल्यार जमीन पाड पडटा. आनी फूडें अळमी येवपाचें बंद जाता” (बिम्ब मासिक मार्च 2013,पान 35) ही वळेरी इतल्यान सोंपना तोच बरोवपी हें असले सतावणेची लांब वळेरी करता. एके विधवे बायले कडेन उलोवंक म्हळ्यार पासून पातक. हेंच विशीं “वटर” सिनेमांतली कल्याणी (विधवा) आपल्या लागीं उलोवंक सोदतल्या नारायणाक सांगता. “पाप लगेगा” त्याच सिनेमांत चिरया (भुरगें विधवा) ‘sweets’ घेवपाक वता तेन्ना ताका विखपी म्हणटा “ विधवा कब से sweets खने लगे?” विधवा बायलेन कशें कितें करूंक जाय तें समाज तांकां शिकयतलो. हें समाजाचें शिकवप धर्मींक [[पुस्तक]]ाचेर आदारीत आसता, असलें चित्रण ह्या सिनेमांत दाखयलां.”
 
 =='''शेवट'''==
