--- a/बाळ्ळी.mw
+++ b/बाळ्ळी.mw
@@ -31,7 +31,7 @@
 * एकूण साक्षर लोकसंख्या: २२७८
 * साक्षर पुरुश लोकसंख्या: १२०३ (८२.५१%)
 * साक्षर स्त्री लोकसंख्या: १०७५ (७२.३४%)
-== शिक्षणिक सुविधा ==  
+== शिक्षणीक सुविधा ==  
 
 गांवांत २ खाजगी पूर्व-प्राथमिक शाळा आसा.
 गांवांत ४ शासकीय प्राथमिक शाळा आसा. 
@@ -42,7 +42,7 @@
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय बांबोळे १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं पॉलिटेक्निक (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
