--- a/बाळ्ळी.mw
+++ b/बाळ्ळी.mw
@@ -41,7 +41,7 @@
 ﻿गांवांत १ खाजगी पदवी महाविद्यालय आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय बांबोळे १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
