*Empty MediaWiki Message*

--- a/अडणें.mw
+++ b/अडणें.mw
@@ -68,7 +68,7 @@
 सगळ्यांत लागीं माध्यमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (कुंकळे) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (केपें) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (वेर्णा CT) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय बांबोळेCT) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (कुडचडे- काकोडा) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (कुडचडे- काकोडा‌) १० किलोमिटर परस चड अंतराचेर आसा.
@@ -76,7 +76,7 @@
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (मडगांव) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (मडगांव) १० किलोमिटर परस चड अंतराचेर आसा.
 
-== वैजकी सुविधा (शासकीय) ==
+== वैजकी सुविधा (सरकारी) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य उपकेंद्र  ५ ते १० किलोमिटराच्या अंतराचेर आसा.
