--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -165,3 +165,5 @@
 बस्तोडा ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : २५.२५
 * शेतकामा खातीर ना वापरिल्ली जमीन: २६.८१
+* ओसाड आनी लागवड ना केल्ली जमीन: ३४.३१
+* कुरणे आनी अन्य मळ: ०
