--- a/बाळ्ळी.mw
+++ b/बाळ्ळी.mw
@@ -45,7 +45,7 @@
 सगळ्यांत लागीं पॉलिटेक्निक वेर्णा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
 
 == वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
