--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -167,3 +167,5 @@
 * शेतकामा खातीर ना वापरिल्ली जमीन: २६.८१
 * ओसाड आनी लागवड ना केल्ली जमीन: ३४.३१
 * कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ३७.५६
+* लागवडयोग्य पडीक जमीन: ०
