--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -169,3 +169,5 @@
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ३७.५६
 * लागवडयोग्य पडीक जमीन: ०
+* कायमस्वरूपी पडीक जमीन: ११४.९१
+* सद्यस्थितींत पडीक जमीन: ०
