--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -171,3 +171,5 @@
 * लागवडयोग्य पडीक जमीन: ०
 * कायमस्वरूपी पडीक जमीन: ११४.९१
 * सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: ८३.३७
+* एकूण कोरड व्हांवपी जमीन: ८२.७५
