--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -177,3 +177,9 @@
 
 
 == शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०.६२
+* तळी: ०
+* ओढे: ०
+* हेर: ०
