--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -183,3 +183,13 @@
 * तळी: ०
 * ओढे: ०
 * हेर: ०
+== उत्पादन ==
+बस्तोडा ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,VEGETABLES,CASHEW NUTS
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[बार्देस]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
