--- a/बस्तोडा.mw
+++ b/बस्तोडा.mw
@@ -187,9 +187,10 @@
 बस्तोडा ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,VEGETABLES,CASHEW NUTS
 
 
-[[वर्ग:[[उत्तर गोवा]]]]
-[[वर्ग:[[बार्देस]]]]
-[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
-
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:बारदेस तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
 
 == संदर्भ ==
