--- a/भुंयपाल.mw
+++ b/भुंयपाल.mw
@@ -1,13 +1,12 @@
-'''भुंयपाल
-'''
+'''भुंयपाल'''
 भुंयपाल हें उत्तर गोंय जिल्ह्यातल्या सत्तरी तालुक्यात ४११.६ हेक्टर क्षेत्राचो गांव आसून २०११ च्या जनगणनेनुसार ह्या गांवांत ३०३ कुंटुंबात पुराय १४०३ लोकसंख्या आसा. हांगा लागीचे शार VALPOI ८ किलोमीटर अंतराचेर आसा. हांगा ७२२ दादले आनीक ६८१ बायलां आसा. हांगा अनुसूचीत जातीचे लोक १३ आसून अनुसूचीत जमातीचे २५ लोक आसात. ह्या गांवाचो जनगणनेतलो थळ निर्देशांक ६२६८०७  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
-साक्षरताय ==  
+साक्षरताय 
 * एकूण साक्षर लोकसंख्या: १००९
 * साक्षर पुरुश लोकसंख्या: ५६७ (७८.५३%)
 * साक्षर स्त्री लोकसंख्या: ४४२ (६४.९%)
 
-शैक्षणिक सुविधा ==  
+== '''शैक्षणिक सुविधा''' ==
  सगळ्यांत लागीं पूर्व-प्राथमीक शाळा (ONDA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
  गांवांत २ शासकीय प्राथमीक शाळा आसा. 
 ﻿ गांवांत १ शासकीय कनिश्ठ माध्यमीक शाळा आसा. 
