--- a/Vedas.mw
+++ b/Vedas.mw
@@ -35,6 +35,7 @@ vedant vegvegllea deutanchim vornnonam ayil'lim asat.Tancheuylean tea devanchi k
 {{VD|वेद}}
 
 [[Category:Konknni]]
-
+[[Category: Itihas / History]]
+[[Category:Dhorm / Religion]]
 
 [[en: Vedas     ]]
