--- a/ब्रम्ह-करमळी.mw
+++ b/ब्रम्ह-करमळी.mw
@@ -25,3 +25,7 @@
 
 == ब्रम्ह-करमळी (६२६७९३) ==
 ब्रम्ह-करमळी हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ५१३.०३ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ९६ कुटुंबाचे व पुराय ४४५ लोकसंख्या आसा. हांगा लागीचे शार VALPOI ६ किलोमीटर अंतरावर आसा. हांगा २३१ दादले आनीक २१४ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६७९३  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+== साक्षरताय ==  
+* एकूण साक्षर लोकसंख्या: ३३७
+* साक्षर पुरुश लोकसंख्या: १९१ (८२.६८%)
+* साक्षर स्त्री लोकसंख्या: १४६ (६८.२२%)
