--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -24,3 +24,4 @@
 }}
 
 == करमळी- बुद्रुक ==
+करमळी- बुद्रुक हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ४७१.४ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ९८ कुटुंबाचे व पुराय ४६८ लोकसंख्या आसा.
