*Empty MediaWiki Message*

--- a/विधवा.mw
+++ b/विधवा.mw
@@ -18,7 +18,7 @@
 
 =='हिन्दू धर्म आनी चाली रिती'==
 हिन्दू धर्मांत एके वटेन बायलेक देवी कशी पुजतात, तिका पांय पडटात आनी हातूय जोडटात. जाल्यार दुसरे वटेन तिका वस्तू समान लेखतात. भगवतगितांत अशें वाचूंक मेळटा, “where women is respected there the God reside” आनीक एके कडेन अशेंय बरयलां “Women are like sudras, low in birth ” तिणें आदल्या जिवीतांत पातक आदरलां देखून तिका हें भोगचें पडटा. विष्णूस्मृती ह्या पुस्तकांत अशें नोंद केल्लें आसा,“एके बायलेचो घोव मेलो जाल्यार तिणें निर्मळ आनी पवित्र जिवीत जगूंक जाय, ना जाल्यार घोवा बरोबर उडी मारून मरूंक जाय. (विष्णूस्मूती-XXV:14) घोव मेल्ले बायलेक दळीद्र म्हूण लेखतात (bad women) तिणें धर्मीक रितींनी वांटो घेवंक जायना. तांबडें न्हेसूंक जायना, मास खावंक जायना, कांकणा फोडप, बिंदी काडप, धवें न्हेसप”
-हेंच विशीं न.ध. बोरकार अशें बरयतात,“विधवेन फुलां माळूंक जायना, तिणें कपलाक कुंकूम लावंक जायना, बरीं कापडां न्हेसून नटूंक जायना, परपुरूशा कडेन उलोवंक जायना, चार चवगां मदीं उठ बस करूंक जायना, धर्मा कार्याक वांटो घेवंक जायना, तुळशीकडेन आनी देवाऱ्यांतल्या देवा कडेन दिवो वा वात लावंक जायना, देव कार्या खातीर फुलां तोडूंक जायना, पोरसांत अळमी आयली जाल्यार तांकां आफडूंक जायान तशें केल्यार जमीन पाड पडटा. आनी फूडें अळमी येवपाचें बंद जाता” (बिम्ब मासिक मार्च 2013,पान 35) ही वळेरी इतल्यान सोंपना तोच बरोवपी हें असले सतावणेची लांब वळेरी करता. एके विधवे बायले कडेन उलोवप म्हळ्यार पासून पातक. हेंच विशीं “वटर” सिनेमांतली कल्याणी (विधवा) आपल्या लागीं उलोवंक सोदतल्या नारायणाक सांगता. “पाप लगेगा” त्याच सिनेमांत चिरया (भुरगें विधवा) ‘sweets’ घेवपाक वता तेन्ना ताका विकपी म्हणटा “ विधवा कब से sweets खाने लगी?” विधवा बायलेन कशें कितें करूंक जाय तें समाज तांकां शिकयतलो. हें समाजाचें शिकवप धर्मींक [[पुस्तक]]ाचेर आदारीत आसता, असलें चित्रण ह्या सिनेमांत दाखयलां.”
+हेंच विशीं न.ध. बोरकार अशें बरयतात,“विधवेन फुलां माळूंक जायना, तिणें कपलाक कुंकूम लावंक जायना, बरीं कापडां न्हेसून नटूंक जायना, परपुरूशा कडेन उलोवंक जायना, चार चवगां मदीं उठ बस करूंक जायना, धर्मा कार्याक वांटो घेवंक जायना, तुळशीकडेन आनी देवाऱ्यांतल्या देवा कडेन दिवो वा वात लावंक जायना, देव कार्या खातीर फुलां तोडूंक जायना, पोरसांत अळमी आयली जाल्यार तांकां आफडूंक जायान तशें केल्यार जमीन पाड पडटा. आनी फूडें अळमी येवपाचें बंद जाता” (बिम्ब मासिक मार्च 2013,पान 35) ही वळेरी इतल्यान सोंपना तोच बरोवपी हें असले सतावणेची लांब वळेरी करता. एके विधवे बायले कडेन उलोवप म्हळ्यार पासून पातक. हेंच विशीं “वटर” सिनेमांतली कल्याणी (विधवा) आपल्या लागीं उलोवंक सोदतल्या नारायणाक सांगता. “पाप लगेगा” त्याच सिनेमांत चिरया (भुरगें विधवा) ‘sweets’ घेवपाक वता तेन्ना ताका विकपी म्हणटा “ विधवा कब से sweets खाने लगी?” विधवा बायलेन कशें कितें करूंक जाय तें समाज तांकां शिकयतालो. हें समाजाचें शिकवप धर्मींक पुस्तकांचेर आदारीत आसता, असलें चित्रण ह्या सिनेमांत दाखयलां.”
 
 =='''शेवट'''==
 ह्या लेखांत आमी खेरीतपणी विधवा बायलेचेर धर्मींक नदरेंतल्यान एक धांवती नदर मारल्या. क्रिस्तांव धर्माचें पवीत्र [[पुस्तक]] उसतायतना आमकां एक वस्त जाणवल्या. आदलो करार विधवा बायलेक पिडापीड दिता जाल्यार नवो करार विधवा बायलेक दयाळ नदरेन पळयता. नव्या करारच्या उजवाडान “Naomis grace” हो पंगड आसल्या विधवाचें बरेंपणां खातीर वावर करतात तशेंच आमी हेर धर्मींक पंगड आसल्या कृपेचो वावर करतात. इजलाम धर्म तर विधवा बायलेचेर चेपण घातिल्लें दिसना. हिन्दू धर्मांत जायत्यो चाली रिती आसात, त्यो विधवाचे प्रस्न वाडयटात.
