*Empty MediaWiki Message*

--- a/खांडेपार.mw
+++ b/खांडेपार.mw
@@ -1,28 +1,28 @@
 खांडेपार
 खांडेपार हे उत्तर गोवा जिल्ह्यातल्या फोंडें तालुक्यातील १८८.१९ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ८६० कुटुंबाचे व पुराय ३७६८ लोकसंख्या आसा. हांगा लागीचे शार PONDA ६ किलोमीटर अंतरावर आसा. हांगा १९१२ दादले आनीक १८५६ बायला आसा. हांगा अनुसूचित जातीचे लोक ४९ आसून अनुसूचित जमातीचे १३२९ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८५३  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
-साक्षरताय ==  
+== साक्षरताय ==  
 * एकूण साक्षर लोकसंख्या: २९६९
 * साक्षर पुरुश लोकसंख्या: १५७९ (८२.५८%)
 * साक्षर स्त्री लोकसंख्या: १३९० (७४.८९%)
 
-शैक्षणिक सुविधा ==  
- ﻿गांवांत १ खाजगी पूर्व-प्राथमिक शाळा आसा.
+== शैक्षणिक सुविधा ==  
+﻿गांवांत १ खाजगी पूर्व-प्राथमिक शाळा आसा.
 गांवांत ६ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
- ﻿गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
- ﻿गांवांत १ खाजगी माध्यमिक शाळा आसा.
- सगळ्यांत लागीं उच्च माध्यमिक शाळा (CURTI CT) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं पदवी महाविद्यालय (BANDORA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (BANDORA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PONDA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (QUELA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+﻿गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
+﻿गांवांत १ खाजगी माध्यमिक शाळा आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (CURTI CT) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (BANDORA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (BANDORA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PONDA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (QUELA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
 
-वैजकी सुविधा (शासकीय) ==
+== वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 ﻿गांवांत १ प्राथमिक आरोग्य उपकेंद्र  आसा.
@@ -51,7 +51,7 @@
 गांवांत अन्य पद्धतीचे उदक पुरवण आसा.
 
 
-नितळसाण ==
+== नितळसाण ==
 गांवांत बंद गटार उपलब्ध ना.
 गांवांत उघडें गटार उपलब्ध ना.
 नीट जलस्त्रोतांत सोडिल्ले सांड उदक
@@ -63,7 +63,7 @@
 गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध ना.
 
 
-दळणवळण आनीक येरादारी ==
+== दळणवळण आनीक येरादारी ==
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध आसा.
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध आसा.
@@ -105,7 +105,7 @@
 गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
-आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
+== आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
 गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा.
 गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा.
@@ -120,7 +120,7 @@
 गांवांत विधानसभा मतदान केंद्र उपलब्ध आसा.
 गांवांत जन्म मृत्यु नोंदणी केंद्र उपलब्ध आसा.
 
-वीज ==
+== वीज ==
 २४ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण शेतकामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
@@ -130,7 +130,7 @@
 २४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 
-जमिनीचो वापर ==
+== जमिनीचो वापर ==
 खांडेपार ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : १०.०६
 * शेतकामा खातीर ना वापरिल्ली जमीन: ०
@@ -145,7 +145,7 @@
 * एकूण बागायत जमीन: १.९३
 
 
-शिंपणावळ सुविधा ==
+== शिंपणावळ सुविधा ==
 शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
 * कालवे: ०
 * बांयो / कूप नलिका: १.९३
