--- a/अँग्लो_इंडियन_साहित्य.mw
+++ b/अँग्लो_इंडियन_साहित्य.mw
@@ -3,7 +3,7 @@
 
 सगळ्यांत पयलीं अँग्लो इंडियन बरपावळ म्हूण गोंयांत आयिल्ले फादर थॉमस स्टीफन्स ( १५४९-१६१९ ) हांचे बरपावळीचो उल्लेख जाता. ताणीं आपल्या बापायक बरयिल्ल्या पत्रांचो ह्या साहित्यांत आस्पाव जाता. ह्याच काळांत लंडनचो वेपारी मास्टर राल्फ फिच हाणें आपल्या भारतांतल्या आनी उदेंतेच्या भोंवडे वर्णनांतल्यान आपल्या साहसांविशीं बरयलां. हीं भोंवडी ताणें १५८३ ते १५९१ ह्या काळांत केल्ली.
 
-खऱ्या अर्थान भारतांत इंग्लेज साहित्य आनी साहित्याविशीं अभ्यास वॉरन हेस्टिंग हाच्या कारकिर्दीच्या शेवटाक (१७७४ - १७८४) सुरू जालो. अठराव्या शतमानाचो चडसो वांटो साहित्याचे नदरेंतल्यान फळादीक थारलो ना, आनी ताच्या फुडल्या शंबर वर्सांनी जें अँग्लो इंडियन साहित्य निर्माण जालें, तें भोंवडे वर्णनाच्या रूपांत आसा. हातूंत मोगल दरबार आनी त्या काळाच्या भारतांतल्या विंगड विंगड प्रांतांतल्या राजकारणा विशीं बरींच वर्णनां आसात. ह्या भोंवडेकाणयांनी त्या बरोवपी लेखकांची साधी सोपी शैली दिश्टी पडटा.
+खऱ्या अर्थान भारतांत इंग्लेज साहित्य आनी साहित्याविशीं अभ्यास वॉरन हेस्टिंग हाच्या कारकिर्दीच्या शेवटाक (१७७४ - १७८४) सुरू जालो. अठराव्या शतमानाचो चडसो वांटो साहित्याचे नदरेंतल्यान फळादीक थारलो ना, आनी ताच्या फुडल्या शंबर वर्सांनी जें अँग्लो इंडियन साहित्य निर्माण जालें, तें भोंवडे वर्णनाच्या रूपांत आसा. हातूंत मोगल दरबार आनी त्या काळाच्या भारतांतल्या विंगड विंगड प्रांतांतल्या राजकारणा विशीं बरींच वर्णनां आसात. ह्या भोंवडेकाणयांनी त्या बरोवपी लेखकांची सादी सोपी शैली दिश्टी पडटा.
 
 ह्या भोंवडे वर्णनांतलीं कांय नांव घेवपासारकीं म्हळ्यार, जहाँगीराच्या दरबारांत आशिल्लो इंग्लीश राजदूत सर थॉमस रो, एडवर्ड टेरी (रिलेशन ऑफ अ व्होएज टू ईस्टर्न इंडिया), विल्यम मॅथोल्ड (रिलेशन ऑफ द किंग्डम ऑफ गोलकोंडा) आनी जॉन फ्रेयर (न्यू अकावंट ऑफ इस्ट इंडिया अँड पर्शिया)
 
