*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -9,3 +9,7 @@
 * पावस (मिमी.): ३०९६.९७
 * कमाल तापमान (सेल्सिअस): ३१.५३
 * किमान तापमान (सेल्सिअस): २३.५१
+
+== साक्षरता ==  
+* एकूण साक्षर लोकसंख्या: ४१२३
+* साक्षर पुरुश लोकसंख्या: २११७ (८४.६१%)
