*Empty MediaWiki Message*

--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -13,3 +13,5 @@
 एकूण साक्षर लोकसंख्या: १२८१७
 साक्षर पुरुश लोकसंख्या: ७१४४ (८१.८७%)
 साक्षर स्त्री लोकसंख्या: ५६७३ (७४.०७%)
+
+नितळसाण आनी पिवपाचें उदक
