*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -14,3 +14,5 @@
 * एकूण साक्षर लोकसंख्या: ४१२३
 * साक्षर पुरुश लोकसंख्या: २११७ (८४.६१%)
 * साक्षर स्त्री लोकसंख्या: २००६ (७९.१६%)
+
+== नितळसाण आनी पिवपाचें उदक ==
