*Empty MediaWiki Message*

--- a/अडणें.mw
+++ b/अडणें.mw
@@ -51,7 +51,7 @@
 
 == अडणें (६२६९४८) ==
 
-अडणें हे दक्षिण गोंय जिल्ह्यातल्या केपें तालुक्यातल्या ९६० हेक्टर क्षेत्राचो गाव आसून २०११ च्या जनगणनेनुसार ह्या गावांत ३६९ कुटुंबाची आनी पुराय १६५७ लोकसंख्या आसा. हांगा लागीचे शार केपें ८ किलोमीटर अंतराचेर आसा. हांगा ८४० दादले आनीक ८१७ बायला आसा. हांगा अनुसूचित जातीचे लोक २ आसून अनुसूचित जमातीचे ७९० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६९४८  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+अडणें हे दक्षिण गोंय जिल्ह्यातल्या केपें तालुक्यातलो ९६० हेक्टर क्षेत्राचो गांव आसून २०११ च्या जनगणनेनुसार ह्या गावांत ३६९ कुटुंबाची आनी पुराय १६५७ लोकसंख्या आसा. हांगा लागीचे शार केपें ८ किलोमीटर अंतराचेर आसा. हांगा ८४० दादले आनीक ८१७ बायलो आसात. हांगा अनुसूचित जातीचे लोक २ आसून अनुसूचित जमातीचे ७९० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६९४८  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
 
 == साक्षरताय ==  
